; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_parsedate.c_curl_getdate.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_parsedate.c_curl_getdate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PARSEDATE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @curl_getdate(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 -1, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @parsedate(i8* %8, i32* %6)
  store i32 %9, i32* %7, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @PARSEDATE_OK, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %22

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  %16 = icmp eq i32 %15, -1
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i32, i32* %6, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %6, align 4
  br label %20

20:                                               ; preds = %17, %14
  %21 = load i32, i32* %6, align 4
  store i32 %21, i32* %3, align 4
  br label %23

22:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %20
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @parsedate(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
